Add control for opening options page

--- a/src/options-page/options.html
+++ b/src/options-page/options.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-  <title>My Test Extension Options</title>
+  <title>Better previews options</title>
   <link rel="stylesheet" href="./options.css">
 </head>
 
