Flesh out JsonForm completely

--- a/src/options-page/options.html
+++ b/src/options-page/options.html
@@ -18,11 +18,7 @@
       <a id="demo-button" class="button">Preview "hello world"</a>
     </div>
 
-    <div class="row">
-      <div class="col">
-        <ul class="real-list list-group"></ul>
-      </div>
-    </div>
+    <div class="options-container"></div>
 
     <div class="row" style="display:none">
       <div class="col">
@@ -33,7 +29,7 @@
               <small class="control-description disabled">Content for list item ent for list item ent for list ent for
                 list item ent for list ent for list item ent for list ent for list item ent for list</small>
             </div>
-            <input class="form-check-input me-1" type="checkbox" value="" id="thirdCheckbox">
+            <input class="control-input form-check-input me-1" type="checkbox" value="" id="thirdCheckbox">
           </li>
 
           <li class="select-template list-group-item p-4 d-flex justify-content-between align-items-center">
@@ -42,7 +38,7 @@
               <small class="control-description disabled">Content for list item ent for for list ent for list item ent
                 for list</small>
             </div>
-            <select class="form-select form-select-md" aria-label="example" style="max-width: 200px">
+            <select class="control-input form-select form-select-md" aria-label="example" style="max-width: 200px">
               <option selected>Open this select menu</option>
               <option value="1">One</option>
               <option value="2">Two</option>
@@ -54,7 +50,7 @@
             <div class="ms-2">
               <div class="control-title fw-bold">Subheading title</div>
               <small class="control-description disabled">Content for list item ent for list item ent for list</small>
-              <input type="range" class="form-range" min="0" max="5" id="customRange2">
+              <input type="range" class="control-input form-range" min="0" max="5" id="customRange2">
             </div>
           </li>
 
@@ -64,7 +60,7 @@
               <small class="control-description disabled">Content for list item ent for list item ent for list</small>
             </div>
             <div class="form-check form-switch">
-              <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked>
+              <input class="control-input form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked>
             </div>
           </li>
 
@@ -74,7 +70,7 @@
               <small class="control-description disabled">Content for list item ent for list item ent for list ent for
                 list item ent for list ent for list item ent for list ent for list item ent for list</small>
             </div>
-            <div class="btn-group" role="group" aria-label="Basic example">
+            <div class="control-input btn-group" role="group" aria-label="Basic example">
               <button type="button" class="btn btn-primary">Left</button>
               <button type="button" class="btn btn-primary">Middle</button>
               <button type="button" class="btn btn-primary">Right</button>
@@ -89,13 +85,13 @@
 
               </div>
               <div class="form-check form-switch">
-                <i class="bi-caret-down-fill" style="font-size: 1.5rem" data-bs-toggle="collapse"
+                <i style="font-size: 1.5rem" data-bs-toggle="collapse"
                   data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample"></i>
               </div>
             </div>
             <div class="collapse ms-2" id="collapseExample">
               <div class="form-group">
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                <textarea class="control-input form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
               </div>
             </div>
           </li>
