Add handling for range, textarea and select

--- a/src/utils/options/json-form.template.html
+++ b/src/utils/options/json-form.template.html
@@ -3,6 +3,8 @@
     <div class="row" style="display:none">
       <div class="col">
         <ul class="list-group">
+
+          <!--Checkbox -->
           <li class="checkbox-template list-group-item p-4 d-flex justify-content-between align-items-center">
             <div class="ms-2 me-5">
               <div class="fw-bold control-title">Subheading title</div>
@@ -12,6 +14,8 @@
             <input class="control-input form-check-input me-1" type="checkbox" value="" id="thirdCheckbox" />
           </li>
 
+
+          <!--Select -->
           <li class="select-template list-group-item p-4 d-flex justify-content-between align-items-center">
             <div class="ms-2 me-5">
               <div class="control-title fw-bold">Subheading title</div>
@@ -19,13 +23,11 @@
                 for list</small>
             </div>
             <select class="control-input form-select form-select-md" aria-label="example" style="max-width: 200px">
-              <option>Open this select menu</option>
-              <option value="1">One</option>
-              <option value="2">Two</option>
-              <option value="3">Three</option>
+              <!--<option>Open this select menu</option>-->
             </select>
           </li>
 
+          <!--Range -->
           <li class="range-template list-group-item p-4">
             <div class="ms-2">
               <div class="control-title fw-bold">Subheading title</div>
@@ -34,6 +36,7 @@
             </div>
           </li>
 
+          <!--Switch  -->
           <li class="switch-template list-group-item p-4 d-flex justify-content-between align-items-center">
             <div class="ms-2 me-auto">
               <div class="control-title fw-bold">Subheading title</div>
@@ -44,6 +47,7 @@
             </div>
           </li>
 
+          <!--Radio -->
           <li class="radio-template list-group-item p-4 d-flex justify-content-between align-items-center">
             <div class="ms-2 me-5">
               <div class="control-title fw-bold">Subheading title</div>
@@ -57,6 +61,7 @@
             </div>
           </li>
 
+          <!--TextArea -->
           <li class="textarea-template list-group-item p-4 ">
             <div class="d-flex justify-content-between align-items-center">
               <div class="ms-2 me-auto">
