Redirect Github page to essentialkit.org

--- a/website/index.html
+++ b/website/index.html
@@ -1,3 +1,5 @@
----
-layout: default
----
+<!DOCTYPE html>
+<meta charset="utf-8">
+<title>Search and Link Preview</title>
+<meta http-equiv="refresh" content="0; URL=https://essentialkit.org/search-and-link-previews">
+<link rel="canonical" href="https://essentialkit.org/search-and-link-previews">
