Update options page to use bootstrap, add preview and issues button.

--- a/src/utils/settings/settings.txt.html
+++ b/src/utils/settings/settings.txt.html
@@ -32,7 +32,7 @@
           <div class="ms-2">
             <div class="control-title fw-bold">Subheading title</div>
             <small class="control-description disabled">Content for list item ent for list item ent for list</small>
-            <input type="range" class="control-input form-range" min="0" max="5" id="customRange2" />
+            <input type="range" class="control-input form-range" id="customRange2" />
           </div>
         </li>
 
