Add disable-on-this-site function

--- a/src/utils/settings/settings.txt.html
+++ b/src/utils/settings/settings.txt.html
@@ -61,21 +61,10 @@
 
         <!--TextArea -->
         <li class="textarea-template list-group-item p-4 ">
-          <div class="d-flex justify-content-between align-items-center">
-            <div class="ms-2 me-auto">
-              <div class="control-title fw-bold">Subheading title</div>
-              <small class="control-description disabled">Content for list item ent for list item ent for list</small>
-
-            </div>
-            <div class="form-check form-switch">
-              <i style="font-size: 1.5rem" data-bs-toggle="collapse" data-bs-target="#collapseExample"
-                aria-expanded="false" aria-controls="collapseExample"></i>
-            </div>
-          </div>
-          <div class="collapse ms-2" id="collapseExample">
-            <div class="form-group">
-              <textarea class="control-input form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-            </div>
+          <div class="ms-2">
+            <div class="control-title fw-bold">Subheading title</div>
+            <small class="control-description disabled">Content for list item ent for list item ent for list</small>
+            <textarea class="control-input form-control p-3 mt-2" rows="5"></textarea>
           </div>
         </li>
       </ul>
