Update settings component

--- a/src/utils/settings/settings.txt.html
+++ b/src/utils/settings/settings.txt.html
@@ -19,7 +19,6 @@
             class="control-input form-check-input me-1"
             type="checkbox"
             value=""
-            id="thirdCheckbox"
           />
         </li>
 
@@ -49,11 +48,8 @@
             <small class="control-description disabled"
               >Content for list item ent for list item ent for list</small
             >
-            <input
-              type="range"
-              class="control-input form-range"
-              id="customRange2"
-            />
+            <input type="range" class="control-input form-range" />
+            Current value: <span></span>
           </div>
         </li>
 
@@ -72,7 +68,6 @@
               class="control-input form-check-input"
               type="checkbox"
               role="switch"
-              id="flexSwitchCheckChecked"
               checked="true"
             />
           </div>
@@ -124,7 +119,7 @@
     >
       <div class="toast-body">
         <img src="../assets/logo-24x24.png" class="rounded me-2" alt="Logo" />
-        Successfully updated settings
+        <span>Successfully updated settings</span>
       </div>
     </div>
   </div>
