Pad settings checkbox a bit

--- a/src/utils/settings/settings.txt.html
+++ b/src/utils/settings/settings.txt.html
@@ -57,7 +57,7 @@
         <li
           class="switch-template list-group-item p-4 d-flex justify-content-between align-items-center"
         >
-          <div class="ms-2 me-auto">
+          <div class="ms-2 me-auto pe-2">
             <div class="control-title fw-bold">Subheading title</div>
             <small class="control-description disabled"
               >Content for list item ent for list item ent for list</small
