--- a/src/options-page/options.html
+++ b/src/options-page/options.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
-    <title i18n>Better previews options</title>
+    <title i18n>Search & Link Preview Options</title>
     <link rel="stylesheet" href="./options.css" />
   </head>
 
@@ -31,7 +31,7 @@
           href="https://github.com/essentialkit/link-previews/issues/new/choose"
           class="btn btn-outline-primary"
           i18n
-          >Report an issue</a
+          >Report an Issue</a
         >
       </p>
     </div>
