Redirect to xtension.net

--- a/website/index.html
+++ b/website/index.html
@@ -3,9 +3,6 @@
 <title>Search and Link Preview</title>
 <meta
   http-equiv="refresh"
-  content="0; URL=https://essentialkit.org/search-and-link-previews"
+  content="0; URL=https://xtensions.net/search-and-link-previews"
 />
-<link
-  rel="canonical"
-  href="https://essentialkit.org/search-and-link-previews"
-/>
+<link rel="canonical" href="https://xtensions.net/search-and-link-previews" />
